Code cleanup fixing potential bugs reported from oracle tool, code updated with new Java features on some places