@@ -37,6 +37,7 @@ import java.security.SecureRandom;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Locale;
+import java.util.Objects;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.locks.ReentrantLock;
 import java.util.stream.Collectors;
@@ -46,7 +47,6 @@ import java.util.stream.Collectors;
 public class KubernetesContainerManagementServiceImpl extends ContainerManagementServiceImpl {
     private static final LoggerService logger = new LoggerService(LoggerFactory.getLogger(KubernetesContainerManagementServiceImpl.class));
     private final KubernetesProperties kubernetesProperties;
-    private final ApiClient client;
     private final KubernetesDeploymentByLabelCacheService kubernetesDeploymentByLabelCacheService;
     private final KubernetesPodByLabelCacheService kubernetesPodByLabelCacheService;
     private static final ReentrantLock ensureDeploymentLock = new ReentrantLock();
@@ -58,7 +58,7 @@ public class KubernetesContainerManagementServiceImpl extends ContainerManagemen
         this.kubernetesProperties = kubernetesProperties;
         this.kubernetesDeploymentByLabelCacheService = kubernetesDeploymentByLabelCacheService;
         this.kubernetesPodByLabelCacheService = kubernetesPodByLabelCacheService;
-        this.client = ClientBuilder.kubeconfig(KubeConfig.loadKubeConfig(new FileReader(ResourceUtils.getFile(this.kubernetesProperties.getKubeConfPath())))).build();
+        ApiClient client = ClientBuilder.kubeconfig(KubeConfig.loadKubeConfig(new FileReader(ResourceUtils.getFile(this.kubernetesProperties.getKubeConfPath())))).build();
         Configuration.setDefaultApiClient(client);
 
     }
@@ -69,7 +69,7 @@ public class KubernetesContainerManagementServiceImpl extends ContainerManagemen
         for (String executionId : this.kubernetesProperties.getServices().keySet()) {
             try {
                 this.removeService(executionId);
-            } catch (ApiException e) {
+            } catch (ApiException ignored) {
             }
         }
     }
@@ -80,26 +80,26 @@ public class KubernetesContainerManagementServiceImpl extends ContainerManagemen
         KubernetesDeploymentConfiguration deploymentConfiguration = this.kubernetesProperties.getDeployments().get(serviceConfiguration.getDeploymentName());
         KubernetesDeploymentByLabelCacheService.KubernetesDeploymentByLabelCacheValue cacheValue = this.kubernetesDeploymentByLabelCacheService.lookup(
                 this.kubernetesDeploymentByLabelCacheService.buildKey(this.kubernetesProperties.getNamespace(), deploymentConfiguration.getDeploymentLabelSelector()));
-        if(cacheValue != null) return this.getServiceContainerKey(service);
+        if (cacheValue != null) return this.getServiceContainerKey(service);
 
         AppsV1Api appsV1Api = new AppsV1Api();
         boolean isLockAcquired = false;
         try {
             isLockAcquired = ensureDeploymentLock.tryLock(1, TimeUnit.SECONDS);
-            if (isLockAcquired){
+            if (isLockAcquired) {
                 try {
                     try {
                         V1DeploymentList deploymentList = appsV1Api.listNamespacedDeployment(this.kubernetesProperties.getNamespace(), null, null, null, null, deploymentConfiguration.getDeploymentLabelSelector(), null, null, null, null, null);
-                        if (deploymentList.getItems().size() > 0) {
-                            this.kubernetesDeploymentByLabelCacheService.put(new KubernetesDeploymentByLabelCacheService.KubernetesDeploymentByLabelCacheValue(this.kubernetesProperties.getNamespace(), deploymentConfiguration.getDeploymentLabelSelector(), deploymentList.getItems().get(0).getMetadata().getName()));
+                        if (!deploymentList.getItems().isEmpty()) {
+                            this.kubernetesDeploymentByLabelCacheService.put(new KubernetesDeploymentByLabelCacheService.KubernetesDeploymentByLabelCacheValue(this.kubernetesProperties.getNamespace(), deploymentConfiguration.getDeploymentLabelSelector(), Objects.requireNonNull(deploymentList.getItems().get(0).getMetadata()).getName()));
                         } else {
                             String jobId = serviceConfiguration.getDeploymentName() + new SecureRandom().nextInt();
                             V1Deployment deploymentSpec = this.loadV1DeploymentYmlWithResourceLoader(deploymentConfiguration.getPath());
-                            deploymentSpec.getMetadata().setName(jobId);
+                            Objects.requireNonNull(deploymentSpec.getMetadata()).setName(jobId);
 
                             //V1Namespace namespace = api.readNamespace(this.kubernetesProperties.getNamespace(), null);
                             V1Deployment deployment = appsV1Api.createNamespacedDeployment(this.kubernetesProperties.getNamespace(), deploymentSpec, null, null, null, null);
-                            this.kubernetesDeploymentByLabelCacheService.put(new KubernetesDeploymentByLabelCacheService.KubernetesDeploymentByLabelCacheValue(this.kubernetesProperties.getNamespace(), deploymentConfiguration.getDeploymentLabelSelector(), deployment.getMetadata().getName()));
+                            this.kubernetesDeploymentByLabelCacheService.put(new KubernetesDeploymentByLabelCacheService.KubernetesDeploymentByLabelCacheValue(this.kubernetesProperties.getNamespace(), deploymentConfiguration.getDeploymentLabelSelector(), Objects.requireNonNull(deployment.getMetadata()).getName()));
                         }
                     } catch (ApiException e) {
                         logger.error(e);
@@ -133,29 +133,31 @@ public class KubernetesContainerManagementServiceImpl extends ContainerManagemen
 
         KubernetesPodByLabelCacheService.KubernetesPodByLabelCacheValue cacheValue = this.kubernetesPodByLabelCacheService.lookup(
                 this.kubernetesPodByLabelCacheService.buildKey(this.kubernetesProperties.getNamespace(), deploymentConfiguration.getPodLabelSelector()));
-        if (cacheValue != null) return new KubernetesContainerKeyImpl(this.kubernetesProperties.getNamespace(), cacheValue.getNames().get(new SecureRandom().nextInt(cacheValue.getNames().size())), serviceConfiguration.getContainerName(), deploymentConfiguration.getPodLabelSelector());
+        if (cacheValue != null)
+            return new KubernetesContainerKeyImpl(this.kubernetesProperties.getNamespace(), cacheValue.getNames().get(new SecureRandom().nextInt(cacheValue.getNames().size())), serviceConfiguration.getContainerName(), deploymentConfiguration.getPodLabelSelector());
 
         List<String> podNames = new ArrayList<>();
         boolean isLockAcquired = false;
         try {
             isLockAcquired = getAvailablePodsLock.tryLock(this.kubernetesProperties.getWaitForRunningPodInMilliseconds(), TimeUnit.MILLISECONDS);
-            if (isLockAcquired){
+            if (isLockAcquired) {
                 try {
                     try {
                         CoreV1Api api = new CoreV1Api();
-                        V1PodList v1PodList = api.listNamespacedPod(this.kubernetesProperties.getNamespace(), null, false, null, null, deploymentConfiguration.getPodLabelSelector(), null, null, null, null, null);
+//                        V1PodList v1PodList = api.listNamespacedPod(this.kubernetesProperties.getNamespace(), null, false, null, null, deploymentConfiguration.getPodLabelSelector(), null, null, null, null, null);
 
                         final List<V1Pod> pods = this.getActivePods(api, deploymentConfiguration);
-                        if (pods.size() == 0 && this.kubernetesProperties.getWaitForRunningPodInMilliseconds() != null) {
+                        if (pods.isEmpty() && this.kubernetesProperties.getWaitForRunningPodInMilliseconds() != null) {
                             Awaitility.with().pollInterval(200, TimeUnit.MILLISECONDS).atMost(this.kubernetesProperties.getWaitForRunningPodInMilliseconds(), TimeUnit.MILLISECONDS).await()
                                     .until(() -> {
                                         pods.clear();
                                         pods.addAll(this.getActivePods(api, deploymentConfiguration));
-                                        return pods.size() > 0;
+                                        return !pods.isEmpty();
                                     });
                         }
-                        podNames.addAll(pods.stream().map(x -> x.getMetadata().getName()).collect(Collectors.toList()));
-                        if (pods.size() > 0) this.kubernetesPodByLabelCacheService.put(new KubernetesPodByLabelCacheService.KubernetesPodByLabelCacheValue(this.kubernetesProperties.getNamespace(), deploymentConfiguration.getPodLabelSelector(), podNames));
+                        podNames.addAll(pods.stream().map(x -> Objects.requireNonNull(x.getMetadata()).getName()).toList());
+                        if (!pods.isEmpty())
+                            this.kubernetesPodByLabelCacheService.put(new KubernetesPodByLabelCacheService.KubernetesPodByLabelCacheValue(this.kubernetesProperties.getNamespace(), deploymentConfiguration.getPodLabelSelector(), podNames));
                     } catch (ApiException e) {
                         logger.error(e);
                         throw e;
@@ -167,14 +169,17 @@ public class KubernetesContainerManagementServiceImpl extends ContainerManagemen
         } catch (InterruptedException e) {
             throw new RuntimeException(e);
         }
-        if (podNames.size() == 0) throw new RuntimeException("No running pod for " + service);
+        if (podNames.isEmpty()) throw new RuntimeException("No running pod for " + service);
 
         return new KubernetesContainerKeyImpl(this.kubernetesProperties.getNamespace(), podNames.get(new SecureRandom().nextInt(podNames.size())), serviceConfiguration.getContainerName(), deploymentConfiguration.getPodLabelSelector());
     }
-    
+
     private List<V1Pod> getActivePods(CoreV1Api api, KubernetesDeploymentConfiguration deploymentConfiguration) throws ApiException {
-        V1PodList v1PodList = api.listNamespacedPod(this.kubernetesProperties.getNamespace(),  null, false, null, null,  deploymentConfiguration.getPodLabelSelector(), null,null, null, null, null);
-        return v1PodList.getItems().stream().filter(x-> x.getStatus().getPhase().toLowerCase(Locale.ROOT).equals(JobStatus.PodPhase.Running.toLowerCase(Locale.ROOT))).collect(Collectors.toList());
+        V1PodList v1PodList = api.listNamespacedPod(this.kubernetesProperties.getNamespace(), null, Boolean.FALSE, null, null, deploymentConfiguration.getPodLabelSelector(), null, null, null, null, null);
+        return v1PodList.getItems()
+                .stream()
+                .filter(x -> Objects.requireNonNull(Objects.requireNonNull(x.getStatus()).getPhase()).toLowerCase(Locale.ROOT).equals(JobStatus.PodPhase.Running.toLowerCase(Locale.ROOT)))
+                .toList();
     }
 
     @Override
@@ -186,22 +191,22 @@ public class KubernetesContainerManagementServiceImpl extends ContainerManagemen
             CoreV1Api api = new CoreV1Api();
             V1Pod podSpec = this.loadV1PodYmlWithResourceLoader(jobConfiguration.getPath());
 
-            podSpec.getMetadata().setName(executionParams.getJobId());
-            if (executionParams.getContainersParams() != null){
+            Objects.requireNonNull(podSpec.getMetadata()).setName(executionParams.getJobId());
+            if (executionParams.getContainersParams() != null) {
                 for (ExecutionContainerParams executionContainerParams : executionParams.getContainersParams()) {
-                    V1Container container = podSpec.getSpec().getContainers().stream().filter(x-> x.getName().equals(executionContainerParams.getContainer())).findFirst().orElse(null);
+                    V1Container container = Objects.requireNonNull(podSpec.getSpec()).getContainers().stream().filter(x -> x.getName().equals(executionContainerParams.getContainer())).findFirst().orElse(null);
                     if (executionContainerParams.getEnvMapping() != null) {
                         for (String envName : executionContainerParams.getEnvMapping().keySet()) {
                             V1EnvVar envVar = new V1EnvVar();
                             envVar.setName(envName);
                             envVar.setValue(executionContainerParams.getEnvMapping().get(envName));
-                            container.addEnvItem(envVar);
+                            Objects.requireNonNull(container).addEnvItem(envVar);
                         }
                     }
                 }
             }
-            if (executionParams.getEnvMapping() != null && executionParams.getEnvMapping().size() > 0){
-                for (V1Container container : podSpec.getSpec().getContainers()) {
+            if (executionParams.getEnvMapping() != null && !executionParams.getEnvMapping().isEmpty()) {
+                for (V1Container container : Objects.requireNonNull(podSpec.getSpec()).getContainers()) {
                     for (String envName : executionParams.getEnvMapping().keySet()) {
                         V1EnvVar envVar = new V1EnvVar();
                         envVar.setName(envName);
@@ -211,7 +216,7 @@ public class KubernetesContainerManagementServiceImpl extends ContainerManagemen
                 }
             }
             V1Pod pod = api.createNamespacedPod(this.kubernetesProperties.getNamespace(), podSpec, null, null, null, null);
-            return pod.getMetadata().getName();
+            return Objects.requireNonNull(pod.getMetadata()).getName();
         } catch (ApiException e) {
             logger.error(e);
             throw e;
@@ -240,8 +245,7 @@ public class KubernetesContainerManagementServiceImpl extends ContainerManagemen
             logger.warn("Pod is null");
             return null;
         }
-        JobStatus returnedStatus = JobStatus.podStatusToJobStatus(pod.getStatus().getPhase());
-        return returnedStatus;
+        return JobStatus.podStatusToJobStatus(Objects.requireNonNull(Objects.requireNonNull(pod.getStatus()).getPhase()));
     }
 
     @Override
@@ -258,19 +262,19 @@ public class KubernetesContainerManagementServiceImpl extends ContainerManagemen
     @Override
     public String execCommand(CommandType type, List<String> command, ContainerKey executionKey) throws InterruptedException, ApiException, IOException {
         logger.debug("Executing docker command -> {}", command.stream().reduce("", (result, element) -> result + " " + element).trim());
-        
+
 //        ExecutionEntity executionEntity = this.initializeExecution(type, String.join(" ", command));
         KubernetesContainerKeyImpl kubernetesExecutionKey = (KubernetesContainerKeyImpl) executionKey;
         try {
             Exec exec = new Exec();
             Process process = null;
             process = exec.exec(kubernetesExecutionKey.getNamespace(), kubernetesExecutionKey.getPodName(), command.toArray(new String[0]), kubernetesExecutionKey.getContainerName(), false, false);
-            BufferedReader in = new BufferedReader(new InputStreamReader(process.getInputStream()));
+//            BufferedReader in = new BufferedReader(new InputStreamReader(process.getInputStream()));
             StringBuilder processOutput = new StringBuilder();
             try (BufferedReader processOutputReader = new BufferedReader(new InputStreamReader(process.getInputStream()));) {
                 String readLine;
                 while ((readLine = processOutputReader.readLine()) != null) {
-                    processOutput.append(readLine + System.lineSeparator());
+                    processOutput.append(readLine).append(System.lineSeparator());
                 }
             }
             process.waitFor();
@@ -279,9 +283,9 @@ public class KubernetesContainerManagementServiceImpl extends ContainerManagemen
 //            this.finishAndUpdateExecution(executionEntity, collectedResult);
             logger.debug(collectedResult);
             return collectedResult;
-        } catch (ApiException | IOException ex){
+        } catch (ApiException | IOException ex) {
             this.kubernetesPodByLabelCacheService.evict(this.kubernetesPodByLabelCacheService.buildKey(this.kubernetesProperties.getNamespace(), kubernetesExecutionKey.getPodLabelSelector()));
-            throw  ex;
+            throw ex;
         }
 
     }
@@ -292,7 +296,7 @@ public class KubernetesContainerManagementServiceImpl extends ContainerManagemen
         KubernetesDeploymentConfiguration deploymentConfiguration = this.kubernetesProperties.getDeployments().get(serviceConfiguration.getDeploymentName());
         KubernetesDeploymentByLabelCacheService.KubernetesDeploymentByLabelCacheValue cacheValue = this.kubernetesDeploymentByLabelCacheService.lookup(
                 this.kubernetesDeploymentByLabelCacheService.buildKey(this.kubernetesProperties.getNamespace(), deploymentConfiguration.getDeploymentLabelSelector()));
-        if(cacheValue == null) return;
+        if (cacheValue == null) return;
         AppsV1Api appsV1Api = new AppsV1Api();
         appsV1Api.deleteNamespacedDeployment(this.kubernetesProperties.getNamespace(), serviceConfiguration.getDeploymentName(), null, null, null, null, null, null);
         this.kubernetesPodByLabelCacheService.evict(this.kubernetesPodByLabelCacheService.buildKey(this.kubernetesProperties.getNamespace(), deploymentConfiguration.getPodLabelSelector()));
